Changes
=======

1.1.5 (TBD)
------------------

- Members of the Resampling enum with a value > 7 can only be used in warp
  operations (#1930). We now raise a ResamplingAlgorithmError if they are used
  with non-warp read and writes.
- To help users of poetry, the conditional requirements in setup.py have been
  changed to use PEP 496 environment markers exclusively (#1777).

1.1.4 (2020-05-07)
------------------

Bug fixes:

- Raise a more helpful exception when asked to open a dataset in write mode
  using a read-only driver (#1919).
- Missing support for geometry collections in the rasterio.features module
  (#1914) has been fixed (#1915).
- Support for the int8 data type has been extended to the InMemoryRaster class
  (#1880).
- rasterio.plot.show_hist caused a Python 3.8 syntax warning. This was fixed by
  #1874.
- Make the strict intersection in rio-clip optional with a --with-complement
  option (#1907).
- Add a new as_vsi() method to the Path class for internal use and improve
  Windows path handling and tests thereof (#1895).

1.1.3 (2020-02-24)
------------------

Bug fixes:

- Raise RasterioIOError when errors occur while creating a dataset (#1796).
- Filter more categories of invalid features in rasterize (#1815).
- Fall back to use of a DummySession instead of failing when boto3 isn't
  available (#1864).
- A crashing bug involving boundless reads of VRTs (#1863) has been fixed.
- The required transform argument of windows.from_bounds() was changed from a
  positional arg to a keyword arg in commit 361112e but no guard against the
  default value of None was added (#1857). The function now raises WindowError
  if no transform is given.
- dataset_mask returned in some cases an array with dtype "int64" (#1856). This
  bug was introduced in 1.1.2 and has been fixed.

1.1.2 (2019-12-18)
------------------

Bug fixes:

- Sampling of WarpedVRT datasets was broken in version in 1.1.1 (#1833) and has
  been fixed.