@@ -834,10 +834,10 @@ def silence_errors():
         CPLPopErrorHandler()
 
 
-cdef class MemoryFileBase(object):
+cdef class MemoryFileBase:
     """Base for a BytesIO-like class backed by an in-memory file."""
 
-    def __init__(self, file_or_bytes=None, filename=None, ext=''):
+    def __init__(self, file_or_bytes=None, dirname=None, filename=None, ext=''):
         """A file in an in-memory filesystem.
 
         Parameters
@@ -849,8 +849,9 @@ cdef class MemoryFileBase(object):
         ext : str
             A file extension for the in-memory file under /vsimem. Ignored if
             filename was provided.
+
         """
-        cdef VSILFILE *vsi_handle = NULL
+        cdef VSILFILE *fp = NULL
 
         if file_or_bytes:
             if hasattr(file_or_bytes, 'read'):
@@ -864,33 +865,37 @@ cdef class MemoryFileBase(object):
         else:
             initial_bytes = b''
 
+        # Make an in-memory directory specific to this dataset to help organize
+        # auxiliary files.
+        self._dirname = dirname or str(uuid4())
+        VSIMkdir("/vsimem/{0}".format(self._dirname).encode("utf-8"), 0666)
+
         if filename:
             # GDAL's SRTMHGT driver requires the filename to be "correct" (match
             # the bounds being written)
-            self.name = '/vsimem/{0}'.format(filename)
+            self.name = "/vsimem/{0}/{1}".format(self._dirname, filename)
         else:
             # GDAL 2.1 requires a .zip extension for zipped files.
-            self.name = '/vsimem/{0}.{1}'.format(uuid4(), ext.lstrip('.'))
+            self.name = "/vsimem/{0}/{0}.{1}".format(self._dirname, ext.lstrip('.'))
 
         self._path = self.name.encode('utf-8')
-        self._pos = 0
-        self.closed = False
 
         self._initial_bytes = initial_bytes
         cdef unsigned char *buffer = self._initial_bytes
 
         if self._initial_bytes:
+            self._vsif = VSIFileFromMemBuffer(
+               self._path, buffer, len(self._initial_bytes), 0)
+            self.mode = "r"
 
-            vsi_handle = VSIFileFromMemBuffer(
-                self._path, buffer, len(self._initial_bytes), 0)
+        else:
+            self._vsif = VSIFOpenL(self._path, "w+")
+            self.mode = "w+"
 
-            if vsi_handle == NULL:
-                raise IOError(
-                    "Failed to create in-memory file using initial bytes.")
+        if self._vsif == NULL:
+            raise IOError("Failed to open in-memory file.")
 
-            if VSIFCloseL(vsi_handle) != 0:
-                raise IOError(
-                    "Failed to properly close in-memory file.")
+        self.closed = False
 
     def exists(self):
         """Test if the in-memory file exists.
@@ -899,18 +904,10 @@ cdef class MemoryFileBase(object):
         -------
         bool
             True if the in-memory file exists.
+
         """
-        cdef VSILFILE *fp = NULL
-        cdef const char *cypath = self._path
-
-        with nogil:
-            fp = VSIFOpenL(cypath, 'r')
-
-        if fp != NULL:
-            VSIFCloseL(fp)
-            return True
-        else:
-            return False
+        cdef VSIStatBufL st_buf
+        return VSIStatL(self._path, &st_buf) == 0
 
     def __len__(self):
         """Length of the file's buffer in number of bytes.
@@ -920,91 +917,6 @@ cdef class MemoryFileBase(object):
         int
         """
         return self.getbuffer().size
-
-    def close(self):
-        """Close MemoryFile and release allocated memory."""
-        VSIUnlink(self._path)
-        self._pos = 0
-        self._initial_bytes = None
-        self.closed = True
-
-    def read(self, size=-1):
-        """Read size bytes from MemoryFile."""
-        cdef VSILFILE *fp = NULL
-        # Return no bytes immediately if the position is at or past the
-        # end of the file.
-        length = len(self)
-
-        if self._pos >= length:
-            self._pos = length
-            return b''
-
-        if size == -1:
-            size = length - self._pos
-        else:
-            size = min(size, length - self._pos)
-
-        cdef unsigned char *buffer = <unsigned char *>CPLMalloc(size)
-        cdef bytes result
-
-        fp = VSIFOpenL(self._path, 'r')
-
-        try:
-            fp = exc_wrap_vsilfile(fp)
-            if VSIFSeekL(fp, self._pos, 0) < 0:
-                raise IOError(
-                    "Failed to seek to offset %s in %s.",
-                    self._pos, self.name)
-
-            objects_read = VSIFReadL(buffer, 1, size, fp)
-            result = <bytes>buffer[:objects_read]
-
-        finally:
-            VSIFCloseL(fp)
-            CPLFree(buffer)
-
-        self._pos += len(result)
-        return result
-
-    def seek(self, offset, whence=0):
-        """Seek to position in MemoryFile."""
-        if whence == 0:
-            pos = offset
-        elif whence == 1:
-            pos = self._pos + offset
-        elif whence == 2:
-            pos = len(self) - offset
-        if pos < 0:
-            raise ValueError("negative seek position: {}".format(pos))
-        if pos > len(self):
-            raise ValueError("seek position past end of file: {}".format(pos))
-        self._pos = pos
-        return self._pos
-
-    def tell(self):
-        """Tell current position in MemoryFile."""
-        return self._pos
-
-    def write(self, data):
-        """Write data bytes to MemoryFile"""
-        cdef VSILFILE *fp = NULL
-        cdef const unsigned char *view = <bytes>data
-        n = len(data)
-
-        if not self.exists():
-            fp = exc_wrap_vsilfile(VSIFOpenL(self._path, 'w'))
-        else:
-            fp = exc_wrap_vsilfile(VSIFOpenL(self._path, 'r+'))
-            if VSIFSeekL(fp, self._pos, 0) < 0:
-                raise IOError(
-                    "Failed to seek to offset %s in %s.", self._pos, self.name)
-
-        result = VSIFWriteL(view, 1, n, fp)
-        VSIFFlushL(fp)
-        VSIFCloseL(fp)
-
-        self._pos += result
-        return result
 
     def getbuffer(self):
         """Return a view on bytes of the file."""
@@ -1019,6 +931,51 @@ cdef class MemoryFileBase(object):
         else:
             buff_view = <np.uint8_t[:buffer_len]>buffer
         return buff_view
+
+    def close(self):
+        if self._vsif != NULL:
+            VSIFCloseL(self._vsif)
+        self._vsif = NULL
+        VSIRmdir(self._dirname.encode("utf-8"))
+        self.closed = True
+
+    def seek(self, offset, whence=0):
+        return VSIFSeekL(self._vsif, offset, whence)
+
+    def tell(self):
+        if self._vsif != NULL:
+            return VSIFTellL(self._vsif)
+        else:
+            return 0
+
+    def read(self, size=-1):
+        """Read size bytes from MemoryFile."""
+        cdef bytes result
+        cdef unsigned char *buffer = NULL
+        cdef vsi_l_offset buffer_len = 0
+
+        if size < 0:
+            buffer = VSIGetMemFileBuffer(self._path, &buffer_len, 0)
+            size = buffer_len
+
+        buffer = <unsigned char *>CPLMalloc(size)
+
+        try:
+            objects_read = VSIFReadL(buffer, 1, size, self._vsif)
+            result = <bytes>buffer[:objects_read]
+
+        finally:
+            CPLFree(buffer)
+
+        return result
+
+    def write(self, data):
+        """Write data bytes to MemoryFile"""
+        cdef const unsigned char *view = <bytes>data
+        n = len(data)
+        result = VSIFWriteL(view, 1, n, self._vsif)
+        VSIFFlushL(self._vsif)
+        return result
 
 
 cdef class DatasetWriterBase(DatasetReaderBase):
