@@ -4,6 +4,8 @@ Changes
 1.1.5 (TBD)
 ------------------
 
+- MemoryFile implementation has been improved so that it can support multi-part
+  S3 downloads (#1926).
 - Members of the Resampling enum with a value > 7 can only be used in warp
   operations (#1930). We now raise a ResamplingAlgorithmError if they are used
   with non-warp read and writes.
